2/13 捣鼓了一天nodejs整的半成品，用fetch向服务器获取数据

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -51,7 +51,7 @@
 
 <nav class="daohang">
 
-<img src="scSign.png" alt="" class="scSign">
+<img src="https://idolmaster-official.jp/live_event/master_expo/images/common/logo_shiny.png" alt="" class="scSign">
 
 <ul class="dhnr">
 
@@ -159,7 +159,7 @@ width="400px" style="float: right;" title="点击进入283PRO"></a>
 
 <h2>能看完的到我这来领神人奖励</h2>
 
-<img src="scdonhua.png" alt="" style="height: 350px;float: right;user-select: none;">
+<img src="scdonghua.png" alt="" style="height: 350px;float: right;user-select: none;">
 
 <ul>
 
@@ -683,7 +683,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mkd" >
+<div class="checkbox-container" id="mkt" >
 
 <img src="sign/Mikoto_Sign.png" alt="" class="sign" >
 
@@ -699,7 +699,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="luka" >
+<div class="checkbox-container" id="luca" >
 
 <img src="sign/Luca_Sign.png" alt="" class="sign" >
 
@@ -749,11 +749,125 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
+<div class="mp">
+
+<table class="idolmp">
+
+<tr>
+
+<th colspan="8" id="saying" class="saying" style="height: 100px; ">总之这里会有一句话</th>
+
+</tr>
+
+<tr>
+
+<th rowspan="5" style="width: 355px; height: 210px;" colspan="3">
+
+<div class="xuxian"></div>
+
+<img src="scSign.png" alt="" id="tupian" style="height: 200px; margin: 0; user-select: none;opacity:0.3 ;"></img>
+
+</th>
+
+<th style="width: 80px;">姓名：</th>
+
+<td id="name" style="width: 80px;"></td>
+
+<th>签名：</th>
+
+</tr>
+
+<tr>
+
+<th>年龄：</th>
+
+<td id="age"></td>
+
+<th rowspan="7" class="mpSign" style="width: 200px;">
+
+<img src="" alt="" id="mpSign" width="200px">
+
+</th>
+
+</tr>
+
+<tr>
+
+<th>生日：</th>
+
+<td id="birthday"></td>
+
+</tr>
+
+<tr>
+
+<th>体重：</th>
+
+<td id="weight"></td>
+
+</tr>
+
+<tr>
+
+<th>印象色：</th>
+
+<td id="idolcolor"></td>
+
+</tr>
+
+<tr>
+
+<td style="width: 20px;"></td>
+
+<th style="width: 80px;">三维：</th>
+
+<td id="sanwei" colspan="1"></td>
+
+<th style="width: 80px;">血型：</th>
+
+<td id="blood"></td>
+
+</tr>
+
+<tr>
+
+<td></td>
+
+<th>出身：</th>
+
+<td id="home" colspan="1"></td>
+
+<th>兴趣：</th>
+
+<td id="interest"></td>
+
+</tr>
+
+<tr>
+
+<td></td>
+
+<th>利手：</th>
+
+<td id="lishou" colspan="1"></td>
+
+<th>声优：</th>
+
+<td id="sy"></td>
+
+</tr>
+
+</table>
+
+</div>
+
 <footer class="foot"></footer>
 
 </div>
 
 <script src="./js/1.js"></script>
+
+<script src="./js/fetchdemo.js"></script>
 
 </body>
 
@@ -1454,7 +1568,7 @@ justify-content: center;
 
 .scSign{
 
-height: 100px;
+height:100px;
 
 margin:10px auto 0 auto;
 
@@ -1489,6 +1603,52 @@ border-radius: 5px;
 .dhnr::-webkit-scrollbar-thumb:hover {
 
 background: #555;
+
+}
+
+.idolmp{
+
+width: 800px;
+
+margin: 0 auto 0 auto;
+
+border-collapse: collapse;
+
+background-color: rgb(253, 245, 235);
+
+position: relative;
+
+}
+
+.idolmp th{
+
+height: 40px;
+
+padding: 0;
+
+margin: 0;
+
+border: none;
+
+}
+
+.mp{
+
+background: rgba(255, 255, 255, 0.5);
+
+padding: 20px;
+
+width: 800px;
+
+margin: 30px auto 0 auto;
+
+}
+
+#saying{
+
+font-size: 25px;
+
+border-radius: 10px;
 
 }
 ```
@@ -1753,6 +1913,8 @@ a.classList.remove('xz1')
 
 mb.classList.add('xz1');
 
+fetchtupian(mb.id)
+
 var tmd=1
 
 var touming=setInterval(function(){
@@ -1792,6 +1954,12 @@ selectedBox.style.zIndex=1
 selectedBox.style.opacity=1
 
 selectedBox.classList.remove('xz1');})
+
+var pic=document.getElementById('tupian');
+
+pic.src='scSign.png'
+
+pic.style.opacity=0.3;
 
 })
 
@@ -1907,6 +2075,190 @@ a.classList.add('highlight');
 xz.style.color='#FAFAD2';
 
 }
+
+  
+
+async function fetchtupian(id){
+
+var pic=document.getElementById('tupian');
+
+pic.src='';
+
+var lj=await fn1(id);
+
+pic.src=lj;
+
+pic.style.opacity=1;
+
+}
+```
+<br>
+
+### fetchdemo.js
+边看fetch边写的，笔记在js部分
+```
+async function http(obj){
+
+//先将形参obj解构赋值
+
+let {method,url,params,data}=obj
+
+//params需要处理，转化成能拼接在url后面的格式
+
+//data需要处理，如果有需要写完整的代码headers
+
+let res
+
+if(params){
+
+let str=new URLSearchParams(params).toString() //简单的固定写法，可以直接用
+
+url=url+'?'+str;
+
+}
+
+if(data){
+
+res=await fetch(url,{
+
+method:method,
+
+headers:{
+
+'Content-Type':'application/json'
+
+},
+
+body:JSON.stringify(data)
+
+})
+
+}else{
+
+res=await fetch(url)
+
+}
+
+return res.json();
+
+}
+
+async function fn1(name){
+
+let res=await http({
+
+method:'get',
+
+url:'http://127.0.0.1:9000',
+
+params:{
+
+id:name
+
+}
+
+})
+
+console.log(res.src);
+
+return res.src;
+
+}
+```
+<br>
+
+### node.js
+尝试从服务器获取数据，后面估计会考虑用数据库储存数据
+```
+const imgdata={
+
+'mano':{src:'https://www.project-imas.wiki/images/3/3d/SC_P_Sakuragi_Mano_SSR11.jpg'},
+
+'jiaozi':{src:'https://www.project-imas.wiki/images/3/35/SC_P_Kazano_Hiori_SSR05.jpg'},
+
+'mgr':{src:'https://www.project-imas.wiki/images/4/42/SC_P_Hachimiya_Meguru_SSR11.jpg'},
+
+'kgn':{src:'https://www.project-imas.wiki/images/6/68/SC_P_Tsukioka_Kogane_SSR04.jpg'},
+
+'mmm':{src:'https://www.project-imas.wiki/images/7/72/SC_P_Tanaka_Mamimi_SSR04.jpg'},
+
+'sky':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Shirase_Sakuya_SSR07.jpg'},
+
+'fff':{src:'https://project-imas.wiki/images/d/d7/SC_P_Mitsumine_Yuika_SSR09%2B.jpg'},
+
+'krk':{src:'https://www.project-imas.wiki/images/b/b2/SC_P_Yukoku_Kiriko_SSR08.jpg'},
+
+'kaho':{src:'https://www.project-imas.wiki/images/5/5e/SC_P_Komiya_Kaho_SSR10.jpg'},
+
+'cyk':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Sonoda_Chiyoko_SSR07.jpg'},
+
+'juri':{src:'https://www.project-imas.wiki/images/0/07/SC_P_Saijo_Juri_SR05.jpg'},
+
+'rinze':{src:'https://project-imas.wiki/images/e/e1/SC_P_Morino_Rinze_SSR11.jpg'},
+
+'nth':{src:'https://www.project-imas.wiki/images/6/66/SC_P_Arisugawa_Natsuha_SSR08.jpg'},
+
+'amn':{src:'https://project-imas.wiki/images/9/95/SC_P_Osaki_Amana_SSR10.jpg'},
+
+'tenka':{src:'https://www.project-imas.wiki/images/1/11/SC_P_Osaki_Tenka_SSR05.jpg'},
+
+'chyk':{src:'https://project-imas.wiki/images/d/db/SC_P_Kuwayama_Chiyuki_SSR07%2B.jpg'},
+
+'ash':{src:'https://www.project-imas.wiki/images/8/8d/SC_P_Serizawa_Asahi_SSR05.jpg'},
+
+'fyk':{src:'https://www.project-imas.wiki/images/2/2f/SC_P_Mayuzumi_Fuyuko_SSR05.jpg'},
+
+'mei':{src:'https://www.project-imas.wiki/images/c/c3/SC_P_Izumi_Mei_SSR08.jpg'},
+
+'toru':{src:'https://www.project-imas.wiki/images/6/60/SC_P_Asakura_Toru_SSR06.jpg'},
+
+'mdk':{src:'https://project-imas.wiki/images/c/cb/SC_P_Higuchi_Madoka_SSR04.jpg'},
+
+'koito':{src:'https://www.project-imas.wiki/images/c/c2/SC_P_Fukumaru_Koito_SSR08.jpg'},
+
+'hnn':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Ichikawa_Hinana_SSR02.jpg'},
+
+'nck':{src:'https://www.project-imas.wiki/images/6/6e/SC_P_Nanakusa_Nichika_SSR01.jpg'},
+
+'mkt':{src:'https://www.project-imas.wiki/images/4/46/SC_P_Aketa_Mikoto_SSR07.jpg'},
+
+'luca':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Ikaruga_Luca_SSR02.jpg'},
+
+'hana':{src:'https://www.project-imas.wiki/images/7/78/SC_P_Suzuki_Hana_SSR04.jpg'},
+
+'hrk':{src:'https://www.project-imas.wiki/images/f/fe/SC_P_Ikuta_Haruki_SR01.jpg'}
+
+}
+
+const http=require('http');
+
+const url=require('url');
+
+const server=http.createServer((req,res)=>{
+
+res.setHeader('content-type','text/html;charset=utf-8');
+
+res.setHeader('Access-Control-Allow-Origin','*')
+
+let resp=url.parse(req.url,true);
+
+let id=resp.query.id;
+
+console.log(id);
+
+var data=imgdata[id]
+
+res.end(JSON.stringify(data));
+
+});
+
+  
+
+server.listen(9000,()=>{
+
+console.log('服务已启动');
+
+})
 ```
 * **
 ## 图片部分
