2/14 完成了昨天的部分，完善了页面

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -263,7 +263,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mano" >
+<div class="checkbox-container mano" id="mano">
 
 <img src="sign/Mano_Sign.png" alt="" class="sign" >
 
@@ -279,7 +279,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="jiaozi" >
+<div class="checkbox-container jiaozi" id="jiaozi">
 
 <img src="sign/Hiori_Sign.png" alt="" class="sign" >
 
@@ -295,7 +295,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mgr" >
+<div class="checkbox-container mgr" id="mgr">
 
 <img src="sign/Meguru_Sign.png" alt="" class="sign" >
 
@@ -309,7 +309,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kgn" >
+<div class="checkbox-container kgn" id="kgn">
 
 <img src="sign/Kogane_Sign.png" alt="" class="sign" >
 
@@ -323,7 +323,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mmm" >
+<div class="checkbox-container mmm" id="mmm">
 
 <img src="sign/Mamimi_Sign.png" alt="" class="sign" >
 
@@ -337,7 +337,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="sky" >
+<div class="checkbox-container sky" id="sky">
 
 <img src="sign/Sakuya_Sign.png" alt="" class="sign" style="width: 60px;">
 
@@ -351,7 +351,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fff" >
+<div class="checkbox-container fff" id="fff">
 
 <img src="sign/Yuika_Sign.png" alt="" class="sign" style="width: 80px;">
 
@@ -365,7 +365,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="krk" >
+<div class="checkbox-container krk" id="krk">
 
 <img src="sign/Kiriko_Sign.png" alt="" class="sign" >
 
@@ -393,7 +393,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kaho" >
+<div class="checkbox-container kaho" id="kaho">
 
 <img src="sign/Kaho_Sign.png" alt="" class="sign" >
 
@@ -409,7 +409,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="cyk" >
+<div class="checkbox-container cyk" id="cyk">
 
 <img src="sign/Chiyoko_Sign.png" alt="" class="sign" >
 
@@ -425,7 +425,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="juri" >
+<div class="checkbox-container juri" id="juri">
 
 <img src="sign/Juri_Sign.png" alt="" class="sign" >
 
@@ -441,7 +441,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="rinze" >
+<div class="checkbox-container rinze" id="rinze">
 
 <img src="sign/Rinze_Sign.png" alt="" class="sign" >
 
@@ -457,7 +457,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nth" >
+<div class="checkbox-container nth" id="nth">
 
 <img src="sign/Natsuha_Sign.png" alt="" class="sign" >
 
@@ -473,7 +473,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="amn" >
+<div class="checkbox-container amn" id="amn">
 
 <img src="sign/Amana_Sign.png" alt="" class="sign" >
 
@@ -489,7 +489,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="tenka" >
+<div class="checkbox-container tenka" id="tenka">
 
 <img src="sign/Tenka_Sign.png" alt="" class="sign" style="width: 80px;">
 
@@ -505,7 +505,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="chyk" >
+<div class="checkbox-container chyk" id="chyk">
 
 <img src="sign/Chiyuki_Sign.png" alt="" class="sign" >
 
@@ -537,7 +537,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="ash" >
+<div class="checkbox-container ash" id="ash">
 
 <img src="sign/Asahi_Sign.png" alt="" class="sign" >
 
@@ -553,7 +553,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fyk" >
+<div class="checkbox-container fyk" id="fyk">
 
 <img src="sign/Fuyuko_Sign.png" alt="" class="sign" >
 
@@ -569,7 +569,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mei" >
+<div class="checkbox-container mei" id="mei">
 
 <img src="sign/Mei_Sign.png" alt="" class="sign" >
 
@@ -585,7 +585,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="toru" >
+<div class="checkbox-container toru" id="toru">
 
 <img src="sign/Toru_Sign.png" alt="" class="sign" >
 
@@ -601,7 +601,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mdk" >
+<div class="checkbox-container mdk" id="mdk">
 
 <img src="sign/Madoka_Sign.png" alt="" class="sign" >
 
@@ -617,7 +617,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="koito" >
+<div class="checkbox-container koito" id="koito">
 
 <img src="sign/Koito_Sign.png" alt="" class="sign" >
 
@@ -633,7 +633,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hnn" >
+<div class="checkbox-container hnn" id="hnn">
 
 <img src="sign/Hinana_Sign.png" alt="" class="sign" >
 
@@ -667,7 +667,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nck" >
+<div class="checkbox-container nck" id="nck">
 
 <img src="sign/Nichika_Sign.png" alt="" class="sign" >
 
@@ -683,7 +683,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mkt" >
+<div class="checkbox-container mkt" id="mkt">
 
 <img src="sign/Mikoto_Sign.png" alt="" class="sign" >
 
@@ -699,7 +699,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="luca" >
+<div class="checkbox-container luca" id="luca">
 
 <img src="sign/Luca_Sign.png" alt="" class="sign" >
 
@@ -715,7 +715,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hana" >
+<div class="checkbox-container hana" id="hana">
 
 <img src="sign/Hana_Sign.png" alt="" class="sign" >
 
@@ -731,7 +731,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hrk" >
+<div class="checkbox-container hrk" id="hrk">
 
 <img src="sign/haruki_Sign.png" alt="" class="sign" >
 
@@ -755,15 +755,19 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <tr>
 
-<th colspan="8" id="saying" class="saying" style="height: 100px; ">总之这里会有一句话</th>
+<th colspan="8" style="height: 100px; position: relative;" class="say cs mptitle">
+
+<span id="saying" class="saying">偶像情报</span>
+
+<span id="saying2" class="saying2"></span>
+
+</th>
 
 </tr>
 
 <tr>
 
-<th rowspan="5" style="width: 355px; height: 210px;" colspan="3">
-
-<div class="xuxian"></div>
+<th rowspan="5" style="width: 355px; height: 210px;" colspan="3" class="idoltp">
 
 <img src="scSign.png" alt="" id="tupian" style="height: 200px; margin: 0; user-select: none;opacity:0.3 ;"></img>
 
@@ -771,7 +775,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <th style="width: 80px;">姓名：</th>
 
-<td id="name" style="width: 80px;"></td>
+<td id="name" style="width: 150px;"></td>
 
 <th>签名：</th>
 
@@ -785,7 +789,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <th rowspan="7" class="mpSign" style="width: 200px;">
 
-<img src="" alt="" id="mpSign" width="200px">
+<img src="" alt="" id="mpSign" width="200px" style="user-select: none;">
 
 </th>
 
@@ -809,15 +813,15 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <tr>
 
-<th>印象色：</th>
+<th>身高：</th>
 
-<td id="idolcolor"></td>
+<td id="height"></td>
 
 </tr>
 
 <tr>
 
-<td style="width: 20px;"></td>
+<td style="width: 0px;"></td>
 
 <th style="width: 80px;">三维：</th>
 
@@ -847,9 +851,9 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <td></td>
 
-<th>利手：</th>
+<th>印象色：</th>
 
-<td id="lishou" colspan="1"></td>
+<td id="idolcolor" colspan="1"></td>
 
 <th>声优：</th>
 
@@ -878,7 +882,6 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 * **
 * ## css文档
 ### style.css
-这里有做一个鼠标移动上去图片逐渐变换的效果，但html文档暂时还没用到。具体效果可见<https://mzh.moegirl.org.cn/%E5%81%B6%E5%83%8F%E5%A4%A7%E5%B8%88_%E9%97%AA%E8%80%80%E8%89%B2%E5%BD%A9>里“登场角色”栏中的效果
 ```
 .hbg{
 
@@ -959,54 +962,6 @@ border: 1px solid #ccc; /* 可选边框 */
 border-radius: 2px;
 
 z-index: 10;
-
-}
-
-#bian{
-
-height: 350px;
-
-display: inline-block;
-
-}
-
-.idolphoto2,.idolphoto1{
-
-width:200px ;
-
-border: 10px solid silver ;
-
-}
-
-#bian:hover>.idolphoto1{
-
-opacity: 1;
-
-box-shadow: 5px 5px 10px rgb(0,0,0,0.5);
-
-}
-
-#bian:hover>.idolphoto2{
-
-opacity: 0;
-
-}
-
-#bian>.idolphoto2,.idolphoto1{
-
-transition: opacity 0.8s;
-
-opacity: 1;
-
-position: absolute;
-
-top:850px;
-
-}
-
-#bian>.idolphoto1{
-
-opacity: 0;
 
 }
 
@@ -1644,11 +1599,89 @@ margin: 30px auto 0 auto;
 
 }
 
-#saying{
+.say{
 
 font-size: 25px;
 
 border-radius: 10px;
+
+}
+
+.saying{
+
+position: absolute;
+
+left: 50%; top: 50%;
+
+transform: translate(-50%, -50%);
+
+z-index: 2;
+
+width: 800px;
+
+color: black;
+
+}
+
+.saying2{
+
+position: absolute;
+
+left: 50%; top: 50%;
+
+transform: translate(-50%, -50%);
+
+z-index: 1;
+
+}
+
+.hover{
+
+transition: opacity 0.5s ease-in-out;
+
+}
+
+.hover:hover{
+
+opacity: 0;
+
+}
+
+.mptitle{
+
+font-size: 50px;
+
+font-family: 'STKaiti';
+
+}
+
+.idoltp:after{
+
+content: '';
+
+position: absolute;
+
+bottom: 0;
+
+right: 0;
+
+height: 2px;
+
+width: 350px;
+
+border-top: 1px solid black;
+
+border-bottom: 1px solid black;
+
+left: 50%;
+
+transform: translateX(-50%);
+
+}
+
+.idoltp{
+
+position: relative;
 
 }
 ```
@@ -1657,169 +1690,175 @@ border-radius: 10px;
 ### colors
 就是设置背景颜色的
 ```
-#mano{
+.mano{
 
 background-color: #FFBAD6;
 
 }
 
-#jiaozi{
+.jiaozi{
 
 background-color: #144384;
 
 }
 
-#mgr{
+.mgr{
 
 background-color: #FFE012;
 
 }
 
-#kgn{
+.kgn{
 
 background-color: #F84CAD;
 
 }
 
-#mmm{
+.mmm{
 
 background-color: #A846FB;
 
 }
 
-#sky{
+.sky{
 
 background-color: #006047;
 
 }
 
-#fff{
+.fff{
 
 background-color: #3B91C4;
 
 }
 
-#krk{
+.krk{
 
 background-color: #D9F2FF;
 
 }
 
-#kaho{
+.kaho{
 
 background-color: #E5461C;
 
 }
 
-#cyk{
+.cyk{
 
 background-color: #F93B90;
 
 }
 
-#juri{
+.juri{
 
 background-color: #FFC602;
 
 }
 
-#rinze{
+.rinze{
 
 background-color: #89C3EB;
 
 }
 
-#nth{
+.nth{
 
 background-color: #90E667;
 
 }
 
-#amn{
+.amn{
 
 background-color: #F54275;
 
 }
 
-#tenka{
+.tenka{
 
 background-color: #E75BEC;
 
-}#chyk{
+}.chyk{
 
 background-color: #FBFAFA;
 
 }
 
-#ash{
+.ash{
 
 background-color: #F30100;
 
 }
 
-#fyk{
+.fyk{
 
 background-color: #5CE626;
 
 }
 
-#mei{
+.mei{
 
 background-color: #FF00FF;
 
 }
 
-#toru{
+.toru{
 
 background-color: #50D0D0;
 
 }
 
-#mdk{
+.mdk{
 
 background-color: #BE1E3E;
 
 }
 
-#koito{
+.koito{
 
 background-color: #7967C3;
 
 }
 
-#hnn{
+.hnn{
 
 background-color: #FFC639;
 
 }
 
-#nck{
+.nck{
 
 background-color: #A6CEB6;
 
 }
 
-#mkd{
+.mkt{
 
 background-color: #760F10;
 
 }
 
-#luka{
+.luca{
 
 background-color: #24130D;
 
 }
 
-#hana{
+.hana{
 
 background-color: #E0B5D3;
 
 }
 
-#hrk{
+.hrk{
 
 background-color: #EAD7A4;
+
+}
+
+.cs{
+
+background-color: rgba(153,153,153,0.1);
 
 }
 ```
@@ -1871,13 +1910,21 @@ var sign=0
 
 var qm=setInterval(function(){
 
-if(sign<1.05&&mb.className==='checkbox-container xz'){
+if(sign<1.05&&mb.className.includes('xz')){
 
 sn.style.opacity=sign
 
 sign+=0.05;
 
-}else{
+}else if(sign<1.05){
+
+sn.style.opacity=0;
+
+clearInterval(qm);
+
+}
+
+else{
 
 clearInterval(qm);
 
@@ -1915,6 +1962,8 @@ mb.classList.add('xz1');
 
 fetchtupian(mb.id)
 
+document.getElementById('tupian').style.opacity=1;
+
 var tmd=1
 
 var touming=setInterval(function(){
@@ -1945,6 +1994,10 @@ var qkbtn=document.querySelector('.qk')
 
 qkbtn.addEventListener('mousedown',function(){
 
+var saying=document.getElementById('saying');
+
+saying.setAttribute('class', 'saying');
+
 document.querySelector('.qk').style.color="black";
 
 document.querySelectorAll('.xz1').forEach(function(selectedBox) {
@@ -1957,7 +2010,7 @@ selectedBox.classList.remove('xz1');})
 
 var pic=document.getElementById('tupian');
 
-pic.src='scSign.png'
+fetchtupian('cs');
 
 pic.style.opacity=0.3;
 
@@ -2084,11 +2137,57 @@ var pic=document.getElementById('tupian');
 
 pic.src='';
 
+var pic1=document.getElementById('mpSign');
+
+pic1.src='';
+
 var lj=await fn1(id);
 
-pic.src=lj;
+var {src,mpSign,name,age,birthday,height,weight,sanwei,blood,hometown,interest,sy,idolcolor,saying,saying2}=lj;
 
-pic.style.opacity=1;
+const sz1=[src,mpSign,name,age,birthday,height,weight,sanwei,blood,hometown,interest,sy,idolcolor,saying];
+
+const sz2=['tupian','mpSign','name','age','birthday','height','weight','sanwei','blood','home','interest','sy','idolcolor','saying']
+
+for(let i=0;i<14;i++){
+
+let data=document.getElementById(sz2[i]);
+
+if(i<2){
+
+data.src=sz1[i];
+
+}else{data.innerHTML=sz1[i];}
+
+}
+
+var ys=document.getElementById('saying');
+
+var ys2=document.getElementById('saying2');
+
+if(id!=='cs'){ys.parentNode.setAttribute('class', 'say'+' '+id);}
+
+else{ys.parentNode.setAttribute('class', 'say'+' '+id+' '+'mptitle');}
+
+if(id!=='cs'){ys.setAttribute('class', 'saying'+' '+id);}
+
+if(id==='luca'){
+
+ys.style.color='rgb(251,240,163)';
+
+ys2.style.color='rgb(251,240,163)';
+
+ys.classList.add('hover');
+
+ys2.innerHTML=saying2
+
+}else{
+
+ys.style.color='black';
+
+ys2.innerHTML=''
+
+}
 
 }
 ```
@@ -2159,9 +2258,7 @@ id:name
 
 })
 
-console.log(res.src);
-
-return res.src;
+return res;
 
 }
 ```
@@ -2172,61 +2269,877 @@ return res.src;
 ```
 const imgdata={
 
-'mano':{src:'https://www.project-imas.wiki/images/3/3d/SC_P_Sakuragi_Mano_SSR11.jpg'},
+'cs':{src:'scSign.png',
 
-'jiaozi':{src:'https://www.project-imas.wiki/images/3/35/SC_P_Kazano_Hiori_SSR05.jpg'},
+mpSign:'',
 
-'mgr':{src:'https://www.project-imas.wiki/images/4/42/SC_P_Hachimiya_Meguru_SSR11.jpg'},
+name:'',
 
-'kgn':{src:'https://www.project-imas.wiki/images/6/68/SC_P_Tsukioka_Kogane_SSR04.jpg'},
+age:'',
 
-'mmm':{src:'https://www.project-imas.wiki/images/7/72/SC_P_Tanaka_Mamimi_SSR04.jpg'},
+birthday:'',
 
-'sky':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Shirase_Sakuya_SSR07.jpg'},
+height:'',
 
-'fff':{src:'https://project-imas.wiki/images/d/d7/SC_P_Mitsumine_Yuika_SSR09%2B.jpg'},
+weight:'',
 
-'krk':{src:'https://www.project-imas.wiki/images/b/b2/SC_P_Yukoku_Kiriko_SSR08.jpg'},
+sanwei:'',
 
-'kaho':{src:'https://www.project-imas.wiki/images/5/5e/SC_P_Komiya_Kaho_SSR10.jpg'},
+blood:'',
 
-'cyk':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Sonoda_Chiyoko_SSR07.jpg'},
+hometown:'',
 
-'juri':{src:'https://www.project-imas.wiki/images/0/07/SC_P_Saijo_Juri_SR05.jpg'},
+interest:'',
 
-'rinze':{src:'https://project-imas.wiki/images/e/e1/SC_P_Morino_Rinze_SSR11.jpg'},
+sy:'',
 
-'nth':{src:'https://www.project-imas.wiki/images/6/66/SC_P_Arisugawa_Natsuha_SSR08.jpg'},
+idolcolor:'',
 
-'amn':{src:'https://project-imas.wiki/images/9/95/SC_P_Osaki_Amana_SSR10.jpg'},
+saying:'偶像情报'
 
-'tenka':{src:'https://www.project-imas.wiki/images/1/11/SC_P_Osaki_Tenka_SSR05.jpg'},
+},
 
-'chyk':{src:'https://project-imas.wiki/images/d/db/SC_P_Kuwayama_Chiyuki_SSR07%2B.jpg'},
+'mano':{src:'https://www.project-imas.wiki/images/3/3d/SC_P_Sakuragi_Mano_SSR11.jpg',
 
-'ash':{src:'https://www.project-imas.wiki/images/8/8d/SC_P_Serizawa_Asahi_SSR05.jpg'},
+mpSign:'https://www.project-imas.wiki/images/9/98/ManoSakuragiSign.png',
 
-'fyk':{src:'https://www.project-imas.wiki/images/2/2f/SC_P_Mayuzumi_Fuyuko_SSR05.jpg'},
+name:'樱木真乃',
 
-'mei':{src:'https://www.project-imas.wiki/images/c/c3/SC_P_Izumi_Mei_SSR08.jpg'},
+age:'16',
 
-'toru':{src:'https://www.project-imas.wiki/images/6/60/SC_P_Asakura_Toru_SSR06.jpg'},
+birthday:'4月25日(金牛座)',
 
-'mdk':{src:'https://project-imas.wiki/images/c/cb/SC_P_Higuchi_Madoka_SSR04.jpg'},
+height:'155cm',
 
-'koito':{src:'https://www.project-imas.wiki/images/c/c2/SC_P_Fukumaru_Koito_SSR08.jpg'},
+weight:'48Kg',
 
-'hnn':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Ichikawa_Hinana_SSR02.jpg'},
+sanwei:'86 58 88',
 
-'nck':{src:'https://www.project-imas.wiki/images/6/6e/SC_P_Nanakusa_Nichika_SSR01.jpg'},
+blood:'A型',
 
-'mkt':{src:'https://www.project-imas.wiki/images/4/46/SC_P_Aketa_Mikoto_SSR07.jpg'},
+hometown:'东京都',
 
-'luca':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Ikaruga_Luca_SSR02.jpg'},
+interest:'外出、公园晒太阳',
 
-'hana':{src:'https://www.project-imas.wiki/images/7/78/SC_P_Suzuki_Hana_SSR04.jpg'},
+sy:'关根瞳',
 
-'hrk':{src:'https://www.project-imas.wiki/images/f/fe/SC_P_Ikuta_Haruki_SR01.jpg'}
+idolcolor:'#ffbad6',
+
+saying:'“我想像暖呼呼的太阳一样，为粉丝们送上笑容”'
+
+},
+
+'jiaozi':{src:'https://www.project-imas.wiki/images/3/35/SC_P_Kazano_Hiori_SSR05.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/6/61/HioriKazanoSign.png',
+
+name:'风野灯织',
+
+age:'15',
+
+birthday:'3月4日(双鱼座)',
+
+height:'154cm',
+
+weight:'43Kg',
+
+sanwei:'75 55 78',
+
+blood:'A型',
+
+hometown:'东京都',
+
+interest:'音乐鉴赏、探寻美景、占卜',
+
+sy:'近藤玲奈',
+
+idolcolor:'#144384',
+
+saying:'“只这些还远远不够……我想要成为比任何人都更加耀眼的偶像”'
+
+},
+
+'mgr':{src:'https://www.project-imas.wiki/images/4/42/SC_P_Hachimiya_Meguru_SSR11.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/6/69/MeguruHachimiyaSign.png',
+
+name:'八宫巡',
+
+age:'16',
+
+birthday:'7月22日(巨蟹座)',
+
+height:'157cm',
+
+weight:'46Kg',
+
+sanwei:'90 59 89',
+
+blood:'O型',
+
+hometown:'美国 马萨诸塞州',
+
+interest:'与人交谈、活动身体',
+
+sy:'峰田茉优',
+
+idolcolor:'#ffe012',
+
+saying:'“制作人，快点走吧！我呢，想让大家都尽～情地开心”'
+
+},
+
+'kgn':{src:'https://www.project-imas.wiki/images/6/68/SC_P_Tsukioka_Kogane_SSR04.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/9/9d/KoganeSign.png',
+
+name:'月冈恋钟',
+
+age:'19',
+
+birthday:'2月25日(双鱼座)',
+
+height:'165cm',
+
+weight:'58Kg',
+
+sanwei:'93 60 91',
+
+blood:'B型',
+
+hometown:'长崎县',
+
+interest:'俺的料理，不管怎样都是超赞的啦！',
+
+sy:'𥐟部花凛',
+
+idolcolor:'#f84cad',
+
+saying:'“要当偶像没有人比得过我！全部都交给我吧～！”'
+
+},
+
+'mmm':{src:'https://www.project-imas.wiki/images/7/72/SC_P_Tanaka_Mamimi_SSR04.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/9/97/MamimiTanakaSign.png',
+
+name:'田中摩美美',
+
+age:'18',
+
+birthday:'5月24日(双子座)',
+
+height:'161cm',
+
+weight:'49kg',
+
+sanwei:'81 56 83',
+
+blood:'B型',
+
+hometown:'神奈川县',
+
+interest:'流浪、戏弄人',
+
+sy:'菅沼千纱',
+
+idolcolor:'#a846fb',
+
+saying:'“摩美美，最讨厌麻烦事了～今天的课可以翘掉吗～？”'
+
+},
+
+'sky':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Shirase_Sakuya_SSR07.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/a/af/SakuyaShiraseSign.png',
+
+name:'白濑咲耶',
+
+age:'18',
+
+birthday:'6月27日(巨蟹座)',
+
+height:'175',
+
+weight:'60kg',
+
+sanwei:'91 58 87',
+
+blood:'A型',
+
+hometown:'高知县',
+
+interest:' 去不同的地方',
+
+sy:'八卷安奈',
+
+idolcolor:'#006047',
+
+saying:'“想要成为让人心动不已的存在，作为偶像我会全力以赴的”'
+
+},
+
+'fff':{src:'https://project-imas.wiki/images/d/d7/SC_P_Mitsumine_Yuika_SSR09%2B.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/5/57/YuikaMitsumineSign.png',
+
+name:'三峰结华',
+
+age:'19',
+
+birthday:'1月16日(摩羯座)',
+
+height:'158cm',
+
+weight:'44kg',
+
+sanwei:'73 52 81',
+
+blood:' O型',
+
+hometown:'福岛县',
+
+interest:'观赏偶像表演、摄影、游戏、动画、读书',
+
+sy:'成海瑠奈→希水汐',
+
+idolcolor:'#3b91c4',
+
+saying:'“好的好的，为了发掘了三峰的制作人，这边就稍微再加把劲啰—？”'
+
+},
+
+'krk':{src:'https://www.project-imas.wiki/images/b/b2/SC_P_Yukoku_Kiriko_SSR08.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/2/24/KirikoYukokuSign.png',
+
+name:'幽谷雾子',
+
+age:'17',
+
+birthday:'9月23日(天秤座)',
+
+height:'160cm',
+
+weight:'51kg',
+
+sanwei:'79 55 81',
+
+blood:'AB型',
+
+hometown:'青森县',
+
+interest:'收集可爱的东西、手工艺、献血',
+
+sy:'结名美月',
+
+idolcolor:'#d9f2ff',
+
+saying:'“并不是因为、受伤了……但是，包绷带的理由……是秘密♪”'
+
+},
+
+'kaho':{src:'https://www.project-imas.wiki/images/5/5e/SC_P_Komiya_Kaho_SSR10.jpg',
+
+mpSign:'https://project-imas.wiki/images/5/50/KahoKomiyaSign.png',
+
+name:'小宫果穗',
+
+age:'12',
+
+birthday:'7月29日(狮子座)',
+
+height:'163cm',
+
+weight:'45kg',
+
+sanwei:'80 57 83',
+
+blood:'A型',
+
+hometown:'东京都',
+
+interest:'看星期天早上的儿童节目、收集周边商品',
+
+sy:'河野日和',
+
+idolcolor:'#e5461c',
+
+saying:'“为了成为英雄一般的偶像，我会加油的！”'
+
+},
+
+'cyk':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Sonoda_Chiyoko_SSR07.jpg',
+
+mpSign:'https://project-imas.wiki/images/0/06/ChiyokoSonodaSign.png',
+
+name:'园田智代子',
+
+age:'17',
+
+birthday:'2月24日(双鱼座)',
+
+height:'149cm',
+
+weight:'46kg',
+
+sanwei:'85 56 82',
+
+blood:'A型',
+
+hometown:'千叶县',
+
+interest:'探访甜品店',
+
+sy:'白石晴香',
+
+idolcolor:'#f93b90',
+
+saying:'“在你的身边甜甜～的智代子，请记住作为巧克力偶像的我吧！”'
+
+},
+
+'juri':{src:'https://www.project-imas.wiki/images/0/07/SC_P_Saijo_Juri_SR05.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/a/ad/JuriSaijoSign.png',
+
+name:'西城树里',
+
+age:'17',
+
+birthday:'11月26日(射手座)',
+
+height:'160cm',
+
+weight:'48kg',
+
+sanwei:'75 58 78',
+
+blood:'O型',
+
+hometown:'神奈川',
+
+interest:'外国音乐、游戏',
+
+sy:'永井真里子',
+
+idolcolor:'#ffc602',
+
+saying:'“我来当偶像……怎么看都不是那块料吧！？”'
+
+},
+
+'rinze':{src:'https://project-imas.wiki/images/e/e1/SC_P_Morino_Rinze_SSR11.jpg',
+
+mpSign:'https://project-imas.wiki/images/3/35/RinzeMorinoSign.png',
+
+name:'杜野凛世',
+
+age:'16',
+
+birthday:'10月19日(天秤座)',
+
+height:'155cm',
+
+weight:'44kg',
+
+sanwei:'70 54 78',
+
+blood:'B型',
+
+hometown:'鸟取县',
+
+interest:'少女漫画、全部艺道',
+
+sy:'丸冈和佳奈',
+
+idolcolor:'#97cbef',
+
+saying:'“凛世会……一生追随制作人大人”'
+
+},
+
+'nth':{src:'https://www.project-imas.wiki/images/6/66/SC_P_Arisugawa_Natsuha_SSR08.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/8/83/NatsuhaArisugawaSign.png',
+
+name:'有栖川夏叶',
+
+age:'20',
+
+birthday:'8月16日(狮子座)',
+
+height:'168cm',
+
+weight:'49kg',
+
+sanwei:'85 58 84',
+
+blood:'B型',
+
+hometown:'爱知',
+
+interest:'健身、伸展',
+
+sy:'凉本秋穗',
+
+idolcolor:'#90E667',
+
+saying:'“听好了？要定下目标的话就是世界第一！<br>是我的制作人的话就紧紧跟上来吧！”'
+
+},
+
+'amn':{src:'https://project-imas.wiki/images/9/95/SC_P_Osaki_Amana_SSR10.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/1/11/AmanaOsakiSign.png',
+
+name:'大崎甘奈',
+
+age:'17',
+
+birthday:'12月25日(摩羯座)',
+
+height:'159cm',
+
+weight:'43kg',
+
+sanwei:'80 56 80',
+
+blood:'A型',
+
+hometown:'富山县',
+
+interest:'购物、美甲、自拍',
+
+sy:'黑木穗乃香',
+
+idolcolor:'#f54275',
+
+saying:'“甘奈我呢，想要尽全力享受只有现在才能做到的事☆呐，甜花酱♪”'
+
+},
+
+'tenka':{src:'https://www.project-imas.wiki/images/1/11/SC_P_Osaki_Tenka_SSR05.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/e/ea/TenkaOsakiSign.png',
+
+name:'大崎甜花',
+
+age:'17',
+
+birthday:'12月25日(摩羯座)',
+
+height:'159cm',
+
+weight:'44kg',
+
+sanwei:'81 58 83',
+
+blood:'A型',
+
+hometown:' 富山县',
+
+interest:'睡午觉、浏览网络、动画、游戏',
+
+sy:'前川凉子',
+
+idolcolor:'#e75bec',
+
+saying:'“甜花，偶像什么的，当不来的……大概……<br>奈、奈酱、救救我……”'
+
+},
+
+'chyk':{src:'https://project-imas.wiki/images/d/db/SC_P_Kuwayama_Chiyuki_SSR07%2B.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/a/ae/ChiyukiKuwayamaSign.png',
+
+name:'桑山千雪',
+
+age:'23',
+
+birthday:'4月18日(白羊座)',
+
+height:'163cm',
+
+weight:'47kg',
+
+sanwei:'89 58 92',
+
+blood:'A型',
+
+hometown:'山口县',
+
+interest:'小饰品制作',
+
+sy:'芝崎典子',
+
+idolcolor:'#fbfafa',
+
+saying:'“作为大家的姐姐，必须更加地可靠才行，桑山千雪，努力做偶像♪”'
+
+},
+
+'ash':{src:'https://www.project-imas.wiki/images/8/8d/SC_P_Serizawa_Asahi_SSR05.jpg',
+
+mpSign:'https://project-imas.wiki/images/a/a6/AsahiSerizawaSign.png',
+
+name:'芹泽朝日',
+
+age:'14',
+
+birthday:'1月4日(摩羯座)',
+
+height:'153cm',
+
+weight:'47kg',
+
+sanwei:'78 58 77',
+
+blood:'AB型',
+
+hometown:'东京都',
+
+interest:'人类观察、搭话',
+
+sy:'田中有纪',
+
+idolcolor:'#f30100',
+
+saying:'“偶像好深奥的呢！啊哈哈，真开心呢！”'
+
+},
+
+'fyk':{src:'https://www.project-imas.wiki/images/2/2f/SC_P_Mayuzumi_Fuyuko_SSR05.jpg',
+
+mpSign:'https://project-imas.wiki/images/c/c2/FuyukoMayuzumiSign.png',
+
+name:' 黛冬优子',
+
+age:'19',
+
+birthday:'12月4日(射手座)',
+
+height:'163cm',
+
+weight:'55kg',
+
+sanwei:'78 59 81',
+
+blood:'A型',
+
+hometown:'茨城县',
+
+interest:'和朋友聊天♪',
+
+sy:'幸村惠理',
+
+idolcolor:'#5ce626',
+
+saying:'“冬优，想让大家都露出笑容！<br>——只要这样说，就能提升好感度对吧？”'
+
+},
+
+'mei':{src:'https://www.project-imas.wiki/images/c/c3/SC_P_Izumi_Mei_SSR08.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/0/03/MeiIzumiSign.png',
+
+name:'和泉爱依',
+
+age:'18',
+
+birthday:'8月2日(狮子座)',
+
+height:'162cm',
+
+weight:'51kg',
+
+sanwei:'90 58 88',
+
+blood:'O型',
+
+hometown:'埼玉',
+
+interest:'和朋友游玩，听时下的音乐',
+
+sy:'北原沙弥香',
+
+idolcolor:'#ff00ff',
+
+saying:'“演～艺～圈可是正经牛得不行的那种吧，咱也能整成个那样的？”'
+
+},
+
+'toru':{src:'https://www.project-imas.wiki/images/6/60/SC_P_Asakura_Toru_SSR06.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/9/9b/ToruAsakuraSign.png',
+
+name:'浅仓透',
+
+age:'17',
+
+birthday:'5月4日(金牛座)',
+
+height:'160cm',
+
+weight:'50kg',
+
+sanwei:'82 57 78',
+
+blood:'B型',
+
+hometown:'东京都',
+
+interest:'观看电影电视剧',
+
+sy:'和久井优',
+
+idolcolor:'#50d0d0',
+
+saying:'“能像这样相遇… 我 ，很开心”'
+
+},
+
+'mdk':{src:'https://project-imas.wiki/images/c/cb/SC_P_Higuchi_Madoka_SSR04.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/5/55/MadokaHiguchiSign.png',
+
+name:'樋口円香',
+
+age:'17',
+
+birthday:'10月27日(天蝎座)',
+
+height:'159cm',
+
+weight:'47kg',
+
+sanwei:'79 55 79',
+
+blood:'B型',
+
+hometown:'东京都',
+
+interest:'并没有',
+
+sy:'土屋李央',
+
+idolcolor:'#be1e3e',
+
+saying:'“能对明明没胜算的赌注感兴趣…您还真是位头脑发热的人物呢”'
+
+},
+
+'koito':{src:'https://www.project-imas.wiki/images/c/c2/SC_P_Fukumaru_Koito_SSR08.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/b/b5/KoitoFukumaruSign.png',
+
+name:'福丸小糸',
+
+age:'16',
+
+birthday:'11月11日(天蝎座)',
+
+height:'148cm',
+
+weight:'42kg',
+
+sanwei:'71 54 73',
+
+blood:'O型',
+
+hometown:'东京都',
+
+interest:'读书',
+
+sy:'田岛纱兰',
+
+idolcolor:'#7967c3',
+
+saying:'“噗呀！？怎怎怎、怎么了……！我做了什么吗？”'
+
+},
+
+'hnn':{src:'https://www.project-imas.wiki/images/0/05/SC_P_Ichikawa_Hinana_SSR02.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/e/ee/HinanaIchikawaSign.png',
+
+name:'市川雏菜',
+
+age:'15',
+
+birthday:'3月17日(双鱼座)',
+
+height:'165cm',
+
+weight:'56kg',
+
+sanwei:'87 60 86',
+
+blood:'A型',
+
+hometown:'神奈川',
+
+interest:'无论什么都挺喜欢～',
+
+sy:'冈咲美保',
+
+idolcolor:'#ffc639',
+
+saying:'“雏菜能觉得幸福才是最棒的～♡是这样没错吧？”'
+
+},
+
+'nck':{src:'https://www.project-imas.wiki/images/6/6e/SC_P_Nanakusa_Nichika_SSR01.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/d/dd/NichikaNanakusaSign.png',
+
+name:'七草日花',
+
+age:'16',
+
+birthday:'7月26日(狮子座)',
+
+height:'158cm',
+
+weight:'48kg',
+
+sanwei:'82 55 84',
+
+blood:'O型',
+
+hometown:'埼玉',
+
+interest:'音乐鉴赏',
+
+sy:'紫月杏朱彩',
+
+idolcolor:'#a6ceb6',
+
+saying:'“我不是为了创造回忆而来的！你明白吗？制作人先生！”'
+
+},
+
+'mkt':{src:'https://www.project-imas.wiki/images/4/46/SC_P_Aketa_Mikoto_SSR07.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/0/0e/MikotoAketaSign.png',
+
+name:'绯田美琴',
+
+age:'24',
+
+birthday:'9月8日(处女座)',
+
+height:'170cm',
+
+weight:'54kg',
+
+sanwei:'85 57 85',
+
+blood:'B型',
+
+hometown:'北海道',
+
+interest:'作词作曲',
+
+sy:'山根绮',
+
+idolcolor:'#760F10',
+
+saying:'“偶像对我而言，真的是非常殷切的梦想”'
+
+},
+
+'luca':{src:'https://www.project-imas.wiki/images/c/cf/SC_P_Ikaruga_Luca_SSR02.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/8/83/LucaIkarugaSign.png',
+
+name:'斑鸠路加',
+
+age:'20',
+
+birthday:'1月31日(水瓶座)',
+
+height:'161cm',
+
+weight:'44kg',
+
+sanwei:'76 54 78',
+
+blood:'A型',
+
+hometown:'神奈川县',
+
+interest:'无',
+
+sy:'川口莉奈',
+
+idolcolor:'#24130D',
+
+saying:'“——我不会被指示，也不会被舍弃……尤其是被你们这么做”',
+
+saying2:'“——到底有谁，能来拯救我呢”'
+
+},
+
+'hana':{src:'https://www.project-imas.wiki/images/7/78/SC_P_Suzuki_Hana_SSR04.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/1/19/HanaSuzukiSign.png',
+
+name:'铃木羽那',
+
+age:'18',
+
+birthday:'10月2日(天秤座)',
+
+height:'158cm',
+
+weight:'49kg',
+
+sanwei:'84 58 82',
+
+blood:' O型',
+
+hometown:'冈山县',
+
+interest:'散步',
+
+sy:'三川华月',
+
+idolcolor:'#E0B5D3',
+
+saying:'“——怎么样，可爱吗？啊哈，被制作人这样说感觉好令人振奋呢”'
+
+},
+
+'hrk':{src:'https://www.project-imas.wiki/images/f/fe/SC_P_Ikuta_Haruki_SR01.jpg',
+
+mpSign:'https://www.project-imas.wiki/images/b/bb/HarukiIkutaSign.png',
+
+name:'郁田阳希',
+
+age:'17',
+
+birthday:'4月5日(白羊座)',
+
+height:'156cm',
+
+weight:'47kg',
+
+sanwei:'82 57 83',
+
+blood:'AB型',
+
+hometown:'长野县',
+
+interest:'逛街，收拾整理',
+
+sy:'小泽丽那',
+
+idolcolor:'#EAD7A4',
+
+saying:'“我想要看看广阔的世界 如果当偶像的话，或许能做到也说不定”'
+
+}
 
 }
 
@@ -2246,7 +3159,7 @@ let id=resp.query.id;
 
 console.log(id);
 
-var data=imgdata[id]
+var data=imgdata[id];
 
 res.end(JSON.stringify(data));
 
