2/14 稍微优化了一下样式

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -243,6 +243,8 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
+<div class="idolml">
+
 <div><button class="qk">清空选择</button></div>
 
 <div class="biaoge">
@@ -862,6 +864,8 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 </tr>
 
 </table>
+
+</div>
 
 </div>
 
@@ -1573,6 +1577,8 @@ background-color: rgb(253, 245, 235);
 
 position: relative;
 
+border-radius: 10px;
+
 }
 
 .idolmp th{
@@ -1589,13 +1595,15 @@ border: none;
 
 .mp{
 
-background: rgba(255, 255, 255, 0.5);
-
-padding: 20px;
+padding: 0px;
 
 width: 800px;
 
 margin: 30px auto 0 auto;
+
+box-shadow:0px 0px 1px black ;
+
+border-radius: 10px;
 
 }
 
@@ -1682,6 +1690,20 @@ transform: translateX(-50%);
 .idoltp{
 
 position: relative;
+
+}
+
+.idolml{
+
+background-color:rgba(255, 255, 255, 0.5);
+
+padding: 20px 10px 20px 10px;
+
+margin: 30px 10px 30px 10px;
+
+position: relative;
+
+z-index: -1;
 
 }
 ```
@@ -1982,7 +2004,7 @@ event.target.style.zIndex=-2;
 
 else{clearInterval(touming)
 
-}},50);
+}},35);
 
 }
 
